JSP페이지 태그에 대한 CSS 수정
JSP페이지에 HTML 태그를 수정하면서 CSS스타일도 수정함

--- a/JSPBoard/src/main/webapp/css/style.css
+++ b/JSPBoard/src/main/webapp/css/style.css
@@ -45,7 +45,11 @@ a {
   font-size: 1.6rem;
 }
 
-.search_form .hidden {
+.search_form input.words {
+  padding-left: 5px;
+}
+
+.hidden {
   display: none;
 }
 
@@ -64,7 +68,29 @@ a {
   text-align: center;
 }
 
+.bt_wrap input,
 .bt_wrap a {
+  display: inline-block;
+  min-width: 80px;
+  margin-left: 10px;
+  padding: 10px;
+  border: 1px solid #000;
+  border-radius: 2px;
+  font-size: 1.4rem;
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+.bt_wrap input {
+  min-width: 100px;
+}
+
+.bt_wrap input {
+  margin-left: 0;
+}
+
+/* .bt_wrap a {
   display: inline-block;
   min-width: 80px;
   margin-left: 10px;
@@ -81,7 +107,7 @@ a {
 .bt_wrap a.on {
   background-color: #000;
   color: #fff;
-}
+} */
 
 
 /*
@@ -151,12 +177,19 @@ a {
 * page choose
 */
 
+.current_page {
+  float:right;
+  font-size: 1.5rem;
+}
+
 .board_page {
   margin-top: 30px;
   text-align: center;
   font-size: 0;
+  cursor: pointer;
 }
 
+.board_page span,
 .board_page a {
   display: inline-block;
   width: 32px;
@@ -174,13 +207,28 @@ a {
 
 .board_page a.bt {
   font-size: 1.2rem;
-  padding: 5px;
+  padding-top: 5px;
+  padding-right: 5px;
   letter-spacing: -1px;
+}
+
+.board_page span {
+  border: 1px solid #fff;
+}
+
+.board_page span.bt{
+  padding: 5px;
+  border: 1px solid #ddd;
 }
 
 .board_page a.num {
   font-size: 1.4rem;
   padding: 9px;
+}
+
+.board_page a.num.blue {
+  color: blue;
+  font-weight: bold;
 }
 
 .board_page a.num.on {
